# Aeiva

./: .gitignore  404.html  CNAME  LICENSE  README.md  README_CN.md  ROADMAP.md  aeiva_environment.yml  directory_tree.txt  index.html  milvus_demo.db  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test_database.db
.reports/: metaui-evaluation-required-uvpath.json  metaui-evaluation-required-uvpath.md  metaui-evaluation-required-uvpath.replay.json  metaui-evaluation-required-uvpath.replay.md  metaui-evaluation-required.json  metaui-evaluation-required.md  metaui-evaluation-required.replay.json  metaui-evaluation-required.replay.md  metaui-evaluation.host.json  metaui-evaluation.host.md  metaui-evaluation.host.replay.json  metaui-evaluation.host.replay.md  metaui-evaluation.json  metaui-evaluation.md  metaui-evaluation.replay.json  metaui-evaluation.replay.md  metaui-long.json  metaui-long.md  metaui-replay-smoke.json  metaui-replay-smoke.md
GENERATE_DOCS/: index.html
How_to_Make_a_Python_Package/: index.html
README_CN/: index.html
Thoughts_on_key_concepts_for_agentic_intelligence/: index.html
assets/: README.md  System.graffle  aeiva-logo-black.eps
blogs/: index.html
coding_guidelines/: index.html
configs/: README.md  file_pathes.yaml  logger_config.json  logger_config.yaml  train_macaw.yaml
datasets/: README.md  directory_tree.txt
docs/: README.md  ROADMAP.md  Thoughts_on_key_concepts_for_agentic_intelligence.md  blogs.md  explanation.md  generate_docs.md  how-to-guides.md  index.md  install_minedojo.md  intro.md  reference.md  roadmp.md  tutorials.md
examples/: README.md  actionable_agent_demo.py  llm_model_smoke_test.py  template_agent_config.json  template_agent_config.yaml
explanation/: index.html
generate_docs/: index.html
helper_scripts/: README.md  print_dir_tree.py  print_requirements.py  remove_caches.py  remove_pycache.sh  run_external_browser_replay.py
how-to-guides/: index.html
install_minedojo/: index.html
intro/: index.html
notebooks/: README.md
overrides-material/: home.html
roadmp/: index.html
samples/: README.md
scripts/: README.md  count_code_lines.py  export_virtual_env.sh  print_dir_tree.py  remove_caches.py  remove_pycache.py  update_git.sh
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: README.md  __init__.py  generate_response.py  infer_batch.py  task_operators.py  test_inference_macaw.py  test_minedojo.py  test_preprocess_dataset.py  test_run_macaw.py  test_train_macaw.py  train.py
tutorials/: index.html
uploads/: README.md
(+660 files in other folders)
