[project]
name = "aeiva"
version = "0.9"
description = "aeiva is a general AI agent framework"
authors = [{ name = "Bang Liu", email = "chatsci.ai@gmail.com" }]
requires-python = ">=3.10,<3.14"
readme = "docs/intro.md"
license = "Apache-2.0"
dependencies = [
    "chromadb==0.5.20",
    "click==8.1.7",
    "kuzu",
    "litellm>=1.60.0,<2",
    "networkx==3.4.1",
    "numpy==2.1.3",
    "pydantic==2.10.1",
    "pyyaml==6.0.2",
    "requests==2.32.3",
]

[project.optional-dependencies]
ui = [
    "gradio>=5.7.1,<6",
    "python-dotenv==1.0.1",
    "soundfile>=0.13.1,<1.0",
]
realtime = [
    "fastrtc[vad,stt,tts]",
    "gradio>=5.7.1,<6",
    "gradio-webrtc==0.0.30",
    "python-dotenv==1.0.1",
    "soundfile>=0.13.1,<1.0",
]
realtime-openai = [
    "gradio>=5.7.1,<6",
    "gradio-webrtc==0.0.30",
    "python-dotenv==1.0.1",
    "soundfile>=0.13.1,<1.0",
    "websockets>=12,<14",
]
realtime-gemini = [
    "google-genai==0.8.0",
]
realtime-hf = [
    "huggingface-hub>=0.27,<2.0",
]
server = [
    "fastapi==0.115.5",
    "uvicorn==0.32.1",
]
slack = [
    "slack-sdk>=3.23.0",
]
tools = [
    "appium-python-client==4.3.0",
    "arxiv==2.1.3",
    "docx2pdf>=0.1.8",
    "mammoth==1.8.0",
    "markdownify==0.13.1",
    "ocrmypdf==16.6.2",
    "opencv-python==4.10.0.84",
    "pandas==2.2.3",
    "pdfplumber==0.11.4",
    "playwright>=1.41.0,<2.0",
    "psutil==5.9.8",
    "pyautogui==0.9.41",
    "pyaudio>=0.2.13",
    "pygame==2.6.1",
    "pymupdf4llm==0.0.17",
    "pypdf==5.1.0",
    "pytesseract==0.3.13",
    "python-docx==1.1.2",
    "pywinauto==0.6.6",
    "selenium==4.26.1",
]
sandbox = [
    "docker==6.1.3",
]
learning = [
    "pytorch-lightning==2.4.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "tqdm>=4.67.1,<5",
    "transformers>=4.45.2,<5",
]
graph = [
    "matplotlib==3.9.3",
    "scipy==1.14.1",
]
media = [
    "moviepy==2.1.1",
    "proglog==0.1.12",
]
dev = [
    "pytest==8.3.3",
]
docs = [
    "mkdocs==1.6.1",
]

[project.scripts]
aeiva-chat-terminal = "aeiva.command.aeiva_chat_terminal:run"
aeiva-chat-gradio = "aeiva.command.aeiva_chat_gradio:run"
aeiva-chat-realtime = "aeiva.command.aeiva_chat_realtime:run"
aeiva-chat-slack = "aeiva.command.aeiva_chat_slack:run"
aeiva-chat-whatsapp = "aeiva.command.aeiva_chat_whatsapp:run"
aeiva-gateway = "aeiva.command.aeiva_gateway:run"
aeiva-server = "aeiva.command.aeiva_server:run"
maid-chat = "aeiva.command.maid_chat:run"
aeiva-host = "aeiva.host.host_cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
